--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "News_Videos_Preprocessing/iCable_News_Video_Preprocessing/Step_3_Transcribing the Videos/Transcribing using SenseVoice/SenseVoice"]
 	path = News_Videos_Preprocessing/iCable_News_Video_Preprocessing/Step_3_Transcribing the Videos/Transcribing using SenseVoice/SenseVoice
 	url = https://github.com/FunAudioLLM/SenseVoice.git
+[submodule "News_Videos_Preprocessing/iCable_News_Video_Preprocessing/Step_5&6_Cropping Mouth Region of Interest/auto_avsr"]
+	path = News_Videos_Preprocessing/iCable_News_Video_Preprocessing/Step_5&6_Cropping Mouth Region of Interest/auto_avsr
+	url = https://github.com/mpc001/auto_avsr.git
+[submodule "News_Videos_Preprocessing/TVB_News_Video_Preprocessing/Step_5&6_Cropping Mouth Region of Interest/auto_avsr"]
+	path = News_Videos_Preprocessing/TVB_News_Video_Preprocessing/Step_5&6_Cropping Mouth Region of Interest/auto_avsr
+	url = https://github.com/mpc001/auto_avsr.git
